<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/dataBase"
        android:background="@color/background" />

        <EditText
            android:id="@+id/editNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputName"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editPhoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPhoneNumber"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerRoleSP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="12sp"
            android:ems="9"
            android:layout_marginEnd="8dp"
            android:background="@color/design_default_color_background"/>
        <Button
            android:id="@+id/getBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get"
            android:textSize="12sp"
            android:ems="8"
            android:background="@color/design_default_color_background"/>
        <Button
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="12sp"
            android:ems="8"
            android:layout_marginStart="8dp"
            android:background="@color/design_default_color_background"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/role"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/outputNameTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/format"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/outputPhoneTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/format"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/outputRoleTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/format"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
        
    </LinearLayout>

</LinearLayout>